--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "easymde": "^2.20.0",
         "globals": "^15.14.0",
         "gsap": "^3.13.0",
         "input-otp": "^1.4.2",
@@ -61,6 +62,7 @@
         "react-chartjs-2": "^5.3.1",
         "react-dom": "^19.2.0",
         "react-markdown": "^10.1.0",
+        "react-simplemde-editor": "^5.2.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tw-animate-css": "^1.4.0",
